// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/markdown should match Display snapshot 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      test-value
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should match Input snapshot 1`] = `
<div>
  <div
    class="MarkdownContent"
    data-testid="markdown"
  >
    <div
      class="MarkdownEditor octo-editor  active"
    >
      <div
        class="MarkdownEditorInput"
      >
        <div
          class="DraftEditor-root"
        >
          <div
            class="DraftEditor-editorContainer"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              class="notranslate public-DraftEditor-content"
              contenteditable="true"
              role="combobox"
              spellcheck="false"
              style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
            >
              <div
                data-contents="true"
              >
                <div
                  class=""
                  data-block="true"
                  data-editor="123"
                  data-offset-key="123-0-0"
                >
                  <div
                    class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-text="true"
                      >
                        test-value
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with bold text 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      This is 
      <strong>
        bold
      </strong>
       text
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with code block 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      <code>
        javascript\\nconst x = 1;\\n
      </code>
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with list 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <ul>


      <li>
        Item 1\\n- Item 2\\n- Item 3
      </li>


    </ul>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should show placeholder when empty 1`] = `
<div>
  <div
    class="octo-editor-preview octo-placeholder"
  />
</div>
`;

